[project]
name = "solar-langchain"
version = "0.1.0"
description = "Unofficial LangChain integration for Upstage Solar Chat API"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
keywords = ["langchain", "solar", "upstage", "llm", "chatbot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "httpx>=0.28.1",
    "langchain-core>=0.3.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/solar_langchain"
Repository = "https://github.com/yourusername/solar_langchain"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
